# FG-ABYSS

./: .editorconfig  .env.example  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  DARK_THEME_OPTIMIZATION.md  NAIVE_UI_BORDER_REMOVAL.md  NAIVE_UI_THEME_OVERRIDE_GUIDE.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RESTRUCTURE_FINAL_REPORT.md  RESTRUCTURE_IMPLEMENTATION_LOG.md  SOLUTION.md  Taskfile.yml  app.go  build.ps1  coverage  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  wails-build.ps1
.claude/: settings.local.json
configs/: config.default.yaml  config.dev.yaml  config.prod.yaml  config.test.yaml
data/: app.db-shm  app.db-wal
docs/: COMPLETION_REPORT.md  DEV.md  DEVELOPMENT_PLAN.md  ENCODER_FEATURE.md  FEATURES.md  FEATURE_INTEGRATION_GUIDE.md  FINAL_REPORT.md  GUI.md  PAYLOAD_INTEGRATION_TEST.md  PAYLOAD_TEST_GUIDE.md  PHASE1_SUMMARY.md  PLUGIN_DEVELOPMENT_GUIDE.md  PRD.md  PRDS.md  PROGRESS_SUMMARY.md  QUICK_START.md  README_OVERVIEW.md  TAURI_MIGRATION_PREPARATION.md  UI_INTEGRATION_PLAN.md  UI文档.md  WEBSHELL_WINDOW_FEATURE.md  WINDOW_MIN_SIZE_LIMITATION.md  accent-color-picker-component.md  accent-color-picker-integration-fix.md  appearance-settings-overhaul.md  color-system-guide.md  component-cleanup-summary.md  component-structure-optimization.md  connection-menu-integration.md  custom-color-layout-optimization.md  dashboard-styling-optimization.md  fix-report.md  issues-checklist.md  language-button-alignment-fix.md  language-button-icon-fix.md  language-icon-perfect-centering-fix.md  migration-comparison-report.md  optimization-report.md  page-header-refactoring.md  payload-generation-implementation.md  (+16 more)
document/: BUILD_GUIDE.md  BUILD_VERIFICATION_REPORT.md  COMPLETE_GREEN_REMOVAL_GUIDE.md  DARK_MODE_UI_FIX.md  DEVELOPMENT_MODE_GUIDE.md  QUICK_REFERENCE.md  TIME_FIELD_STANDARD.md  (+3 more)
src-tauri/: Cargo.toml  audit.db  tauri.conf.json
src-tauri/capabilities/: console.json  default.json
src-tauri/commands/: mod.rs  system.rs
src-tauri/core/: mod.rs
src-tauri/migrations/: 001_init.sql  002_plugins.sql  003_payload.sql  004_audit.sql
src-tauri/src/: commands.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/cmd/: audit.rs  mod.rs  payload.rs  plugin.rs
src-tauri/src/commands/: batch.rs  console.rs  mod.rs  payload.rs  plugin.rs  project.rs  settings.rs  system.rs  webshell.rs
src-tauri/src/core/: ascii_conv.rs  config.rs  crypto.rs  database.rs  file_shell.rs  generator.rs  logger.rs  memory_shell.rs  mod.rs  obfuscator.rs  plugin.rs  security_test.rs  suo5.rs
src-tauri/src/core/crypto/: lib.rs  mod.rs
src-tauri/src/core/http/: mod.rs
src-tauri/src/core/project/: manager.rs  mod.rs
src-tauri/src/core/webshell/: manager.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/console/: service.rs
src-tauri/src/features/payload/: mod.rs  models.rs  repo.rs  service.rs
src-tauri/src/features/payload/generator/: mod.rs
src-tauri/src/features/plugin/: models.rs  repo.rs  service.rs
src-tauri/src/features/project/: models.rs  repo.rs  service.rs
src-tauri/src/features/settings/: service.rs
src-tauri/src/features/webshell/: mod.rs  models.rs  queue.rs  repo.rs  service.rs  session.rs
src-tauri/src/infra/: audit.rs  c2_profile.rs  config.rs  crypto.rs  database.rs  db.rs  file_system.rs  http.rs  logger.rs  mod.rs  paths.rs
src-tauri/src/infra/database/: mod.rs
src-tauri/src/infra/database/models/: mod.rs
src-tauri/src/plugins/: loader.rs  mod.rs  runtime.rs  sandbox.rs  tray.rs  types.rs
src-tauri/src/templates/: mod.rs
src-tauri/src/templates/asp/: file_basic.rs  mod.rs
src-tauri/src/templates/aspx/: file_basic.rs
src-tauri/src/templates/jsp/: file_basic.rs
src-tauri/src/templates/php/: file_basic.rs
src-tauri/src/types/: mod.rs  payload.rs
src-tauri/tests/: integration_tests.rs
(+341 files in other folders)
