[package]
name = "fg-abyss"
version = "0.1.0"
description = "FG-ABYSS - Advanced penetration testing framework"
authors = ["FG-ABYSS Team"]
license = "MIT"
repository = "https://github.com/fg-abyss/fg-abyss"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-notification = "2.0.0"

tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"
mlua = { version = "0.9", features = ["lua54", "send", "vendored"] }
wasmtime = "18.0"
argon2 = "0.5"
chrono = "0.4"
dirs = "5.0"
regex = "1.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.30"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
