[package]
name = "fg-abyss"
version = "0.1.0"
edition = "2021"

[lib]
name = "fg_abyss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
specta      = { version = "2.0.0-rc.24" }
specta-typescript = { version = "0.0.11" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["full"] }
tokio-rusqlite = "0.5"
rusqlite    = { version = "0.31", features = ["bundled"] }
uuid        = { version = "1", features = ["v4"] }
argon2      = "0.5"
aes-gcm     = "0.10"
rand        = "0.8"
base64      = "0.22"
url         = "2"
zeroize     = { version = "1", features = ["derive"] }
reqwest     = { version = "0.12", features = ["json", "multipart"] }
dashmap     = "5"
toml        = "0.8"
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
async-trait = "0.1"

[dev-dependencies]
mockall    = "0.12"
tokio-test = "0.4"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
